@@ -17,20 +17,23 @@
  */
 package org.apache.beam.sdk.io.aws.s3;
 
-import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.base.Preconditions.checkState;
+import static org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Preconditions.checkArgument;
+import static org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Preconditions.checkNotNull;
+import static org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Preconditions.checkState;
 
 import com.amazonaws.AmazonClientException;
-import com.amazonaws.client.builder.AwsClientBuilder.EndpointConfiguration;
 import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.AmazonS3ClientBuilder;
 import com.amazonaws.services.s3.model.AmazonS3Exception;
 import com.amazonaws.services.s3.model.CompleteMultipartUploadRequest;
+import com.amazonaws.services.s3.model.CompleteMultipartUploadResult;
+import com.amazonaws.services.s3.model.CopyObjectRequest;
+import com.amazonaws.services.s3.model.CopyObjectResult;
 import com.amazonaws.services.s3.model.CopyPartRequest;
 import com.amazonaws.services.s3.model.CopyPartResult;
 import com.amazonaws.services.s3.model.DeleteObjectsRequest;
 import com.amazonaws.services.s3.model.DeleteObjectsRequest.KeyVersion;
+import com.amazonaws.services.s3.model.GetObjectMetadataRequest;
 import com.amazonaws.services.s3.model.InitiateMultipartUploadRequest;
 import com.amazonaws.services.s3.model.InitiateMultipartUploadResult;
 import com.amazonaws.services.s3.model.ListObjectsV2Request;
@@ -39,40 +42,44 @@ import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.PartETag;
 import com.amazonaws.services.s3.model.S3ObjectSummary;
 import com.google.auto.value.AutoValue;
-import com.google.common.annotations.VisibleForTesting;
-import com.google.common.base.Strings;
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Multimap;
-import com.google.common.util.concurrent.ListeningExecutorService;
-import com.google.common.util.concurrent.MoreExecutors;
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.channels.ReadableByteChannel;
 import java.nio.channels.WritableByteChannel;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.apache.beam.sdk.io.FileSystem;
+import org.apache.beam.sdk.io.aws.options.S3ClientBuilderFactory;
 import org.apache.beam.sdk.io.aws.options.S3Options;
 import org.apache.beam.sdk.io.fs.CreateOptions;
 import org.apache.beam.sdk.io.fs.MatchResult;
+import org.apache.beam.sdk.util.InstanceBuilder;
 import org.apache.beam.sdk.util.MoreFutures;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.annotations.VisibleForTesting;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Strings;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Supplier;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.base.Suppliers;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.collect.ArrayListMultimap;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.collect.ImmutableList;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.collect.ImmutableSet;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.collect.Iterables;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.collect.Multimap;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.util.concurrent.ListeningExecutorService;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.util.concurrent.MoreExecutors;
+import org.apache.beam.vendor.guava.v26_0_jre.com.google.common.util.concurrent.ThreadFactoryBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -80,59 +87,37 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
 
   private static final Logger LOG = LoggerFactory.getLogger(S3FileSystem.class);
 
-  // Amazon S3 API docs: Each part must be at least 5 MB in size, except the last part.
-  private static final int MINIMUM_UPLOAD_BUFFER_SIZE_BYTES = 5 * 1024 * 1024;
-  private static final int DEFAULT_UPLOAD_BUFFER_SIZE_BYTES =
-      Runtime.getRuntime().maxMemory() < 512 * 1024 * 1024
-          ? MINIMUM_UPLOAD_BUFFER_SIZE_BYTES
-          : 64 * 1024 * 1024;
+  // Amazon S3 API: You can create a copy of your object up to 5 GB in a single atomic operation
+  // Ref. https://docs.aws.amazon.com/AmazonS3/latest/dev/CopyingObjectsExamples.html
+  private static final long MAX_COPY_OBJECT_SIZE_BYTES = 5_368_709_120L;
 
   // S3 API, delete-objects: "You may specify up to 1000 keys."
   private static final int MAX_DELETE_OBJECTS_PER_REQUEST = 1000;
 
-  private static final Set<String> NON_READ_SEEK_EFFICIENT_ENCODINGS = ImmutableSet.of("gzip");
+  private static final ImmutableSet<String> NON_READ_SEEK_EFFICIENT_ENCODINGS =
+      ImmutableSet.of("gzip");
 
   // Non-final for testing.
-  private AmazonS3 amazonS3;
-  private final String storageClass;
-  private final int s3UploadBufferSizeBytes;
+  private Supplier<AmazonS3> amazonS3;
+  private final S3Options options;
   private final ListeningExecutorService executorService;
 
   S3FileSystem(S3Options options) {
-    checkNotNull(options, "options");
+    this.options = checkNotNull(options, "options");
+    AmazonS3ClientBuilder builder =
+        InstanceBuilder.ofType(S3ClientBuilderFactory.class)
+            .fromClass(options.getS3ClientFactoryClass())
+            .build()
+            .createBuilder(options);
+    // The Supplier is to make sure we don't call .build() unless we are actually using S3.
+    amazonS3 = Suppliers.memoize(builder::build);
 
-    if (Strings.isNullOrEmpty(options.getAwsRegion())) {
-      LOG.info(
-          "The AWS S3 Beam extension was included in this build, but the awsRegion flag "
-              + "was not specified. If you don't plan to use S3, then ignore this message.");
-    }
-
-    AmazonS3ClientBuilder builder = AmazonS3ClientBuilder.standard()
-        .withCredentials(options.getAwsCredentialsProvider());
-    if (Strings.isNullOrEmpty(options.getAwsServiceEndpoint())) {
-      builder = builder.withRegion(options.getAwsRegion());
-    } else {
-      builder = builder.withEndpointConfiguration(new EndpointConfiguration(
-          options.getAwsServiceEndpoint(), options.getAwsRegion()));
-    }
-    amazonS3 = builder.build();
-
-    this.storageClass = checkNotNull(options.getS3StorageClass(), "storageClass");
-
-    int uploadBufferSizeBytes;
-    if (options.getS3UploadBufferSizeBytes() != null) {
-      uploadBufferSizeBytes = options.getS3UploadBufferSizeBytes();
-    } else {
-      uploadBufferSizeBytes = DEFAULT_UPLOAD_BUFFER_SIZE_BYTES;
-    }
-    this.s3UploadBufferSizeBytes =
-        Math.max(MINIMUM_UPLOAD_BUFFER_SIZE_BYTES, uploadBufferSizeBytes);
-
+    checkNotNull(options.getS3StorageClass(), "storageClass");
     checkArgument(options.getS3ThreadPoolSize() > 0, "threadPoolSize");
     executorService =
-        MoreExecutors.listeningDecorator(Executors.newFixedThreadPool(
-            options.getS3ThreadPoolSize(), new ThreadFactoryBuilder().setDaemon(true).build()));
-
+        MoreExecutors.listeningDecorator(
+            Executors.newFixedThreadPool(
+                options.getS3ThreadPoolSize(), new ThreadFactoryBuilder().setDaemon(true).build()));
   }
 
   @Override
@@ -142,18 +127,18 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
 
   @VisibleForTesting
   void setAmazonS3Client(AmazonS3 amazonS3) {
-    this.amazonS3 = amazonS3;
+    this.amazonS3 = Suppliers.ofInstance(amazonS3);
   }
 
   @VisibleForTesting
-  int getS3UploadBufferSizeBytes() {
-    return s3UploadBufferSizeBytes;
+  AmazonS3 getAmazonS3Client() {
+    return this.amazonS3.get();
   }
 
   @Override
   protected List<MatchResult> match(List<String> specs) throws IOException {
     List<S3ResourceId> paths =
-        FluentIterable.from(specs).transform(spec -> S3ResourceId.fromUri(spec)).toList();
+        specs.stream().map(S3ResourceId::fromUri).collect(Collectors.toList());
     List<S3ResourceId> globs = new ArrayList<>();
     List<S3ResourceId> nonGlobs = new ArrayList<>();
     List<Boolean> isGlobBooleans = new ArrayList<>();
@@ -187,9 +172,7 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
     return matchResults.build();
   }
 
-  /**
-   * Gets {@link MatchResult} representing all objects that match wildcard-containing paths.
-   */
+  /** Gets {@link MatchResult} representing all objects that match wildcard-containing paths. */
   @VisibleForTesting
   List<MatchResult> matchGlobPaths(Collection<S3ResourceId> globPaths) throws IOException {
     List<Callable<ExpandedGlob>> expandTasks = new ArrayList<>(globPaths.size());
@@ -198,8 +181,7 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
     }
 
     Map<S3ResourceId, ExpandedGlob> expandedGlobByGlobPath = new HashMap<>();
-    List<Callable<PathWithEncoding>> contentTypeTasks =
-        new ArrayList<>(globPaths.size());
+    List<Callable<PathWithEncoding>> contentTypeTasks = new ArrayList<>(globPaths.size());
     for (ExpandedGlob expandedGlob : callTasks(expandTasks)) {
       expandedGlobByGlobPath.put(expandedGlob.getGlobPath(), expandedGlob);
       if (expandedGlob.getExpandedPaths() != null) {
@@ -325,7 +307,7 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
               .withContinuationToken(continuationToken);
       ListObjectsV2Result result;
       try {
-        result = amazonS3.listObjectsV2(request);
+        result = amazonS3.get().listObjectsV2(request);
       } catch (AmazonClientException e) {
         return ExpandedGlob.create(glob, new IOException(e));
       }
@@ -336,7 +318,8 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
         if (wildcardRegexp.matcher(objectSummary.getKey()).matches()) {
           S3ResourceId expandedPath =
               S3ResourceId.fromComponents(objectSummary.getBucketName(), objectSummary.getKey())
-                  .withSize(objectSummary.getSize());
+                  .withSize(objectSummary.getSize())
+                  .withLastModified(objectSummary.getLastModified());
           LOG.debug("Expanded S3 object path {}", expandedPath);
           expandedPaths.add(expandedPath);
         }
@@ -349,7 +332,7 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
   private PathWithEncoding getPathContentEncoding(S3ResourceId path) {
     ObjectMetadata s3Metadata;
     try {
-      s3Metadata = amazonS3.getObjectMetadata(path.getBucket(), path.getKey());
+      s3Metadata = getObjectMetadata(path);
     } catch (AmazonClientException e) {
       if (e instanceof AmazonS3Exception && ((AmazonS3Exception) e).getStatusCode() == 404) {
         return PathWithEncoding.create(path, new FileNotFoundException());
@@ -368,11 +351,18 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
     return callTasks(tasks);
   }
 
+  private ObjectMetadata getObjectMetadata(S3ResourceId s3ResourceId) throws AmazonClientException {
+    GetObjectMetadataRequest request =
+        new GetObjectMetadataRequest(s3ResourceId.getBucket(), s3ResourceId.getKey());
+    request.setSSECustomerKey(options.getSSECustomerKey());
+    return amazonS3.get().getObjectMetadata(request);
+  }
+
   @VisibleForTesting
   MatchResult matchNonGlobPath(S3ResourceId path) {
     ObjectMetadata s3Metadata;
     try {
-      s3Metadata = amazonS3.getObjectMetadata(path.getBucket(), path.getKey());
+      s3Metadata = getObjectMetadata(path);
     } catch (AmazonClientException e) {
       if (e instanceof AmazonS3Exception && ((AmazonS3Exception) e).getStatusCode() == 404) {
         return MatchResult.create(MatchResult.Status.NOT_FOUND, new FileNotFoundException());
@@ -384,7 +374,8 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
         MatchResult.Status.OK,
         ImmutableList.of(
             createBeamMetadata(
-                path.withSize(s3Metadata.getContentLength()),
+                path.withSize(s3Metadata.getContentLength())
+                    .withLastModified(s3Metadata.getLastModified()),
                 Strings.nullToEmpty(s3Metadata.getContentEncoding()))));
   }
 
@@ -393,10 +384,12 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
     checkArgument(path.getSize().isPresent(), "path has size");
     checkNotNull(contentEncoding, "contentEncoding");
     boolean isReadSeekEfficient = !NON_READ_SEEK_EFFICIENT_ENCODINGS.contains(contentEncoding);
+
     return MatchResult.Metadata.builder()
         .setIsReadSeekEfficient(isReadSeekEfficient)
         .setResourceId(path)
         .setSizeBytes(path.getSize().get())
+        .setLastModifiedMillis(path.getLastModified().transform(Date::getTime).or(0L))
         .build();
   }
 
@@ -465,18 +458,16 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
   @Override
   protected WritableByteChannel create(S3ResourceId resourceId, CreateOptions createOptions)
       throws IOException {
-    return new S3WritableByteChannel(
-        amazonS3, resourceId, createOptions.mimeType(), storageClass, s3UploadBufferSizeBytes);
+    return new S3WritableByteChannel(amazonS3.get(), resourceId, createOptions.mimeType(), options);
   }
 
   @Override
   protected ReadableByteChannel open(S3ResourceId resourceId) throws IOException {
-    return new S3ReadableSeekableByteChannel(amazonS3, resourceId);
+    return new S3ReadableSeekableByteChannel(amazonS3.get(), resourceId, options);
   }
 
   @Override
-  protected void copy(
-      List<S3ResourceId> sourcePaths, List<S3ResourceId> destinationPaths)
+  protected void copy(List<S3ResourceId> sourcePaths, List<S3ResourceId> destinationPaths)
       throws IOException {
     checkArgument(
         sourcePaths.size() == destinationPaths.size(),
@@ -502,32 +493,55 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
 
   @VisibleForTesting
   void copy(S3ResourceId sourcePath, S3ResourceId destinationPath) throws IOException {
-    String uploadId;
-    long objectSize;
     try {
-      ObjectMetadata objectMetadata =
-          amazonS3.getObjectMetadata(sourcePath.getBucket(), sourcePath.getKey());
-      objectSize = objectMetadata.getContentLength();
-
-      InitiateMultipartUploadRequest initiateUploadRequest =
-          new InitiateMultipartUploadRequest(destinationPath.getBucket(), destinationPath.getKey())
-              .withStorageClass(storageClass)
-              .withObjectMetadata(objectMetadata);
-
-      InitiateMultipartUploadResult initiateUploadResult =
-          amazonS3.initiateMultipartUpload(initiateUploadRequest);
-      uploadId = initiateUploadResult.getUploadId();
-
+      ObjectMetadata sourceObjectMetadata = getObjectMetadata(sourcePath);
+      if (sourceObjectMetadata.getContentLength() < MAX_COPY_OBJECT_SIZE_BYTES) {
+        atomicCopy(sourcePath, destinationPath, sourceObjectMetadata);
+      } else {
+        multipartCopy(sourcePath, destinationPath, sourceObjectMetadata);
+      }
     } catch (AmazonClientException e) {
       throw new IOException(e);
     }
+  }
+
+  @VisibleForTesting
+  CopyObjectResult atomicCopy(
+      S3ResourceId sourcePath, S3ResourceId destinationPath, ObjectMetadata sourceObjectMetadata)
+      throws AmazonClientException {
+    CopyObjectRequest copyObjectRequest =
+        new CopyObjectRequest(
+            sourcePath.getBucket(),
+            sourcePath.getKey(),
+            destinationPath.getBucket(),
+            destinationPath.getKey());
+    copyObjectRequest.setNewObjectMetadata(sourceObjectMetadata);
+    copyObjectRequest.setStorageClass(options.getS3StorageClass());
+    copyObjectRequest.setSourceSSECustomerKey(options.getSSECustomerKey());
+    copyObjectRequest.setDestinationSSECustomerKey(options.getSSECustomerKey());
+    return amazonS3.get().copyObject(copyObjectRequest);
+  }
+
+  @VisibleForTesting
+  CompleteMultipartUploadResult multipartCopy(
+      S3ResourceId sourcePath, S3ResourceId destinationPath, ObjectMetadata sourceObjectMetadata)
+      throws AmazonClientException {
+    InitiateMultipartUploadRequest initiateUploadRequest =
+        new InitiateMultipartUploadRequest(destinationPath.getBucket(), destinationPath.getKey())
+            .withStorageClass(options.getS3StorageClass())
+            .withObjectMetadata(sourceObjectMetadata);
+    initiateUploadRequest.setSSECustomerKey(options.getSSECustomerKey());
+
+    InitiateMultipartUploadResult initiateUploadResult =
+        amazonS3.get().initiateMultipartUpload(initiateUploadRequest);
+    final String uploadId = initiateUploadResult.getUploadId();
 
     List<PartETag> eTags = new ArrayList<>();
 
-    long bytePosition = 0;
-
-    // Amazon parts are 1-indexed, not zero-indexed.
-    for (int partNumber = 1; bytePosition < objectSize; partNumber++) {
+    final long objectSize = sourceObjectMetadata.getContentLength();
+    // extra validation in case a caller calls directly S3FileSystem.multipartCopy
+    // without using S3FileSystem.copy in the future
+    if (objectSize == 0) {
       final CopyPartRequest copyPartRequest =
           new CopyPartRequest()
               .withSourceBucketName(sourcePath.getBucket())
@@ -535,19 +549,35 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
               .withDestinationBucketName(destinationPath.getBucket())
               .withDestinationKey(destinationPath.getKey())
               .withUploadId(uploadId)
-              .withPartNumber(partNumber)
-              .withFirstByte(bytePosition)
-              .withLastByte(Math.min(objectSize - 1, bytePosition + s3UploadBufferSizeBytes - 1));
+              .withPartNumber(1);
+      copyPartRequest.setSourceSSECustomerKey(options.getSSECustomerKey());
+      copyPartRequest.setDestinationSSECustomerKey(options.getSSECustomerKey());
 
-      CopyPartResult copyPartResult;
-      try {
-        copyPartResult = amazonS3.copyPart(copyPartRequest);
-      } catch (AmazonClientException e) {
-        throw new IOException(e);
-      }
+      CopyPartResult copyPartResult = amazonS3.get().copyPart(copyPartRequest);
       eTags.add(copyPartResult.getPartETag());
+    } else {
+      long bytePosition = 0;
+      Integer uploadBufferSizeBytes = options.getS3UploadBufferSizeBytes();
+      // Amazon parts are 1-indexed, not zero-indexed.
+      for (int partNumber = 1; bytePosition < objectSize; partNumber++) {
+        final CopyPartRequest copyPartRequest =
+            new CopyPartRequest()
+                .withSourceBucketName(sourcePath.getBucket())
+                .withSourceKey(sourcePath.getKey())
+                .withDestinationBucketName(destinationPath.getBucket())
+                .withDestinationKey(destinationPath.getKey())
+                .withUploadId(uploadId)
+                .withPartNumber(partNumber)
+                .withFirstByte(bytePosition)
+                .withLastByte(Math.min(objectSize - 1, bytePosition + uploadBufferSizeBytes - 1));
+        copyPartRequest.setSourceSSECustomerKey(options.getSSECustomerKey());
+        copyPartRequest.setDestinationSSECustomerKey(options.getSSECustomerKey());
 
-      bytePosition += s3UploadBufferSizeBytes;
+        CopyPartResult copyPartResult = amazonS3.get().copyPart(copyPartRequest);
+        eTags.add(copyPartResult.getPartETag());
+
+        bytePosition += uploadBufferSizeBytes;
+      }
     }
 
     CompleteMultipartUploadRequest completeUploadRequest =
@@ -556,12 +586,7 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
             .withKey(destinationPath.getKey())
             .withUploadId(uploadId)
             .withPartETags(eTags);
-
-    try {
-      amazonS3.completeMultipartUpload(completeUploadRequest);
-    } catch (AmazonClientException e) {
-      throw new IOException(e);
-    }
+    return amazonS3.get().completeMultipartUpload(completeUploadRequest);
   }
 
   @Override
@@ -575,9 +600,9 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
   @Override
   protected void delete(Collection<S3ResourceId> resourceIds) throws IOException {
     List<S3ResourceId> nonDirectoryPaths =
-        FluentIterable.from(resourceIds)
+        resourceIds.stream()
             .filter(s3ResourceId -> !s3ResourceId.isDirectory())
-            .toList();
+            .collect(Collectors.toList());
     Multimap<String, String> keysByBucket = ArrayListMultimap.create();
     for (S3ResourceId path : nonDirectoryPaths) {
       keysByBucket.put(path.getBucket(), path.getKey());
@@ -585,8 +610,8 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
 
     List<Callable<Void>> tasks = new ArrayList<>();
     for (final String bucket : keysByBucket.keySet()) {
-      for (final List<String> keysPartition
-          : Iterables.partition(keysByBucket.get(bucket), MAX_DELETE_OBJECTS_PER_REQUEST)) {
+      for (final List<String> keysPartition :
+          Iterables.partition(keysByBucket.get(bucket), MAX_DELETE_OBJECTS_PER_REQUEST)) {
         tasks.add(
             () -> {
               delete(bucket, keysPartition);
@@ -601,14 +626,14 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
   private void delete(String bucket, Collection<String> keys) throws IOException {
     checkArgument(
         keys.size() <= MAX_DELETE_OBJECTS_PER_REQUEST,
-        "only %d keys can be deleted per request, but got %d",
+        "only %s keys can be deleted per request, but got %s",
         MAX_DELETE_OBJECTS_PER_REQUEST,
         keys.size());
     List<KeyVersion> deleteKeyVersions =
-        FluentIterable.from(keys).transform(key -> new KeyVersion(key)).toList();
+        keys.stream().map(KeyVersion::new).collect(Collectors.toList());
     DeleteObjectsRequest request = new DeleteObjectsRequest(bucket).withKeys(deleteKeyVersions);
     try {
-      amazonS3.deleteObjects(request);
+      amazonS3.get().deleteObjects(request);
     } catch (AmazonClientException e) {
       throw new IOException(e);
     }
@@ -639,14 +664,14 @@ class S3FileSystem extends FileSystem<S3ResourceId> {
     try {
       List<CompletionStage<T>> futures = new ArrayList<>(tasks.size());
       for (Callable<T> task : tasks) {
-        futures.add(MoreFutures.supplyAsync(() -> task.call(), executorService));
+        futures.add(MoreFutures.supplyAsync(task::call, executorService));
       }
       return MoreFutures.get(MoreFutures.allAsList(futures));
 
     } catch (ExecutionException e) {
       if (e.getCause() != null) {
         if (e.getCause() instanceof IOException) {
-          throw ((IOException) e.getCause());
+          throw (IOException) e.getCause();
         }
         throw new IOException(e.getCause());
       }
